--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,32 +19,30 @@ website:
 #        href: index.qmd
       - text: About
         menu:
-          - text: News
+          - text: Servicios
             href: posts.qmd#category=news
-          - text: Events
+          - text: Tarifas
             href: posts.qmd#category=event      
-          - text: Contact
+          - text: Contacto
             href: contact.qmd             
-      - text: Research
+      - text: Investigación
         menu:
-          - text: List of Publications
+          - text: Publicaciones
             href: publications.qmd
-          - text: Selected Papers
+          - text: Artículos Seleccionados
             href: posts.qmd#category=paper
-          - text: Grants
+          - text: Proyectos
             href: projects.qmd                                
       - text: Outreach
         menu:        
-        - text: Presentations
-          href: posts.qmd#category=presentation                   
-      - text: Group   # Comment the Group part out to remove the Group page
+          - text: Presentaciones
+            href: posts.qmd#category=presentation                   
+      - text: Equipo   # Comment the Group part out to remove the Group page
         href: people.qmd
 
     right: 
-      - text: CV
-        href: files/nsf-biosketch.pdf
       - icon: github
-        href: https://github.com/drganghe/quarto-academic-website-template
+        href: https://github.com/sipba/sipbalab
         target: _blank
       - text: "{{< fa brands bluesky >}}"
         href: https://bsky.app
